# Packaging-and-compression-of-directory-trees-LZW-algorithm

./: README.md
LZW/: CMakeLists.txt
LZW/Source/cpp/: TreeNode.cpp  TreeNode.h  createExampleTree.cpp  createExampleTree.h  deserializeTree.cpp  deserializeTree.h  lzwDecode.cpp  lzwDecode.h  lzwEncode.cpp  lzwEncode.h  main.cpp  saveAndLoadData.cpp  saveAndLoadData.h  serializeTree.cpp  serializeTree.h  unpackTree.cpp  unpackTree.h
